# D2ruBot

./: .env.example  .gitignore  README.md  ROADMAP.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
docker/postgres/init/: 001_schema.sql
scripts/: db-reset.ps1  db-up.ps1
src/dota_forum_bot/: __init__.py  cli.py  client.py  config.py  db.py  drafts.py  exceptions.py  llm.py  llm_client.py  parsers.py  services.py  style_profile.py  ui.py
