[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dota-forum-bot"
version = "0.1.0"
description = "Bot foundation for dota2.ru forum automation"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]==3.2.10",
    "openai>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
